add createchild routes and CodonScrambler method
> Co-authored-by: Matt Taylor <taylor.matt@protonmail.com>
> Co-authored-by: spodolak <stephpodolak@gmail.com>
> Co-authored-by: Jeremy Kale Padot <jeremy@padot.us>

--- a/CreatureTeacher/Views/Creatures/Details.cshtml
+++ b/CreatureTeacher/Views/Creatures/Details.cshtml
@@ -10,6 +10,6 @@
     <li>@Html.ActionLink($"{Model.Eye}", "Details", "Eyes", new { id = Model.EyeId })</li>
     <li>@Html.ActionLink($"{Model.Mouth}", "Details", "Mouth", new { id = Model.MouthId })</li>
     <li>@Html.ActionLink($"{Model.Head}", "Details", "Head", new { id = Model.HeadId })</li>
-    <li>@Html.ActionLink($"{Model.Tail}", "Details", "Tail", new { id = Model.TailID })</li>
+    <li>@Html.ActionLink($"{Model.Tail}", "Details", "Tail", new { id = Model.TailId })</li>
 </ul>
 @Html.ActionLink("Back to List", "Index")
