--- a/CreatureTeacher/Views/Creatures/Index.cshtml
+++ b/CreatureTeacher/Views/Creatures/Index.cshtml
@@ -6,7 +6,7 @@
 @using System.Collections.Generic
 @model List<CreatureTeacher.Models.Creature>
 
-if (@Model.Count == 0)
+@if (@Model.Count == 0)
 {
   <p>You have no creatures.  Would you like to create one?</p>
   @Html.ActionLink("Add New Creature", "Create")
@@ -18,3 +18,33 @@ if (@Model.Count == 0)
 }
 
 <p>Add some buttons here!</p>
+
+
+<!-- Square card -->
+<style>
+.demo-card-square.mdl-card {
+  width: 320px;
+  height: 320px;
+}
+.demo-card-square > .mdl-card__title {
+  color: #fff;
+  background:
+    url('../assets/demos/dog.png') bottom right 15% no-repeat #46B6AC;
+}
+</style>
+
+@* Example card for each creature *@
+<div class="demo-card-square mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title mdl-card--expand">
+    <h2 class="mdl-card__title-text">Update</h2>
+  </div>
+  <div class="mdl-card__supporting-text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Aenan convallis.
+  </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      View Updates
+    </a>
+  </div>
+</div>
