--- a/CreatureTeacher/Views/Shared/_CookieConsentPartial.cshtml
+++ b/CreatureTeacher/Views/Shared/_CookieConsentPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Http.Features
+﻿@* @using Microsoft.AspNetCore.Http.Features
 
 @{
     var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
@@ -22,4 +22,4 @@
             }, false);
         })();
     </script>
-}
+} *@
