--- a/CreatureTeacher/Views/Creatures/CreateChild.cshtml
+++ b/CreatureTeacher/Views/Creatures/CreateChild.cshtml
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
     Breed those Bad Mamma Jammas
   </button>
 
