--- a/CreatureTeacher/wwwroot/css/site.css
+++ b/CreatureTeacher/wwwroot/css/site.css
@@ -58,3 +58,16 @@ body {
 #creature {
   text-align: center;
 }
+
+/* <!-- Square card --> */
+<style>
+.demo-card-square.mdl-card {
+  width: 320px;
+  height: 320px;
+}
+.demo-card-square > .mdl-card__title {
+  color: #fff;
+  background:
+    url('../assets/demos/dog.png') bottom right 15% no-repeat #ec407a;
+}
+</style>
