add styling to splash page
Co-authored-by: spodolak <stephpodolak@gmail.com>
Co-authored-by: Matt Taylor <taylor.matt@protonmail.com>
Co-authored-by: Jeremy Kale Padot <jeremy@padot.us>

--- a/CreatureTeacher/Views/Home/Index.cshtml
+++ b/CreatureTeacher/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Creature Teacher</h1>
+    <h3>Learn About DNA and Make New Friends</h3>
+    <img src="../img/creatureImages/bodies/creature-test.png" width="500">
+
 </div>
