--- a/CreatureTeacher/Views/Creatures/Index.cshtml
+++ b/CreatureTeacher/Views/Creatures/Index.cshtml
@@ -18,7 +18,7 @@
         <i class="material-icons">add</i>
       </button>
               <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a href="/Creatures/Create" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Add New
             @Html.ActionLink($"Add New", "Create")
           </a>
         </div>
@@ -35,7 +35,7 @@
           @creature.Name
         </div>
         <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a asp-controller="Creatures" asp-action="Details" asp-route-creatureid="creature.CreatureId" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">View Details
             @Html.ActionLink($"View Details", "Details", new { id = creature.CreatureId })
           </a>
         </div>
@@ -43,19 +43,3 @@
     </div>
     }
 </div>
-
-@* Example card for each creature *@
-@* <div class="demo-card-square mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Update</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Aenan convallis.
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      @Html.ActionLink($"View Details", "Details", new { id = creature.CreatureId })
-    </a>
-  </div>
-</div> *@
