--- a/CreatureTeacher/wwwroot/css/site.css
+++ b/CreatureTeacher/wwwroot/css/site.css
@@ -61,7 +61,6 @@ body {
 }
 
 /* <!-- Square card --> */
-<style>
 .demo-card-square.mdl-card {
   width: 320px;
   height: 320px;
@@ -69,6 +68,5 @@ body {
 .demo-card-square > .mdl-card__title {
   color: #fff;
   background:
-    url('../assets/demos/dog.png') bottom right 15% no-repeat #ec407a;
+    url('../img/creatureImages/bodies/creature-test.png') bottom right 15% no-repeat #ec407a;
 }
-</style>
