--- a/CreatureTeacher/Views/Creatures/CreateChild.cshtml
+++ b/CreatureTeacher/Views/Creatures/CreateChild.cshtml
@@ -4,15 +4,14 @@
 
 @* @using CreatureTeacher.Models
 @using System.Collections.Generic
-@model List<CreatureTeacher.Models.Creature> *@
+@model CreatureTeacher.Models.Creature *@
 
-@model CreatureTeacher.Models.Creature
-
-@* @if (@Model.Count == 0)
+@model List<CreatureTeacher.Models.Creature>
+@if (@Model.Count == 0)
 {
   <p>You have no creatures.  Would you like to create one?</p>
   @Html.ActionLink("Add New Creature", "Create")
-} *@
+} 
 @using (Html.BeginForm())
 {
 
@@ -20,14 +19,22 @@
     <div class="mdl-cell mdl-cell--6-col">
       Pick A Parent!
       @* Parent Thumbnail Pics *@
-      @Html.LabelFor(model => model.Name)
-			@Html.DropDownList("CreatureId")
+      @foreach (Creature creature in @Model)
+      {
+        <img src="../img/creatureImages/bodies/creature-test.png" width="100">
+      } 
+      @* @Html.LabelFor(model => model.Name)
+			@Html.DropDownList("CreatureId") *@
     </div>
     <div class="mdl-cell mdl-cell--6-col">
       Pick A Parent!
       @* Parent Thumbnail Pics *@
-      @Html.LabelFor(model => model.Name)
-			@Html.DropDownList("CreatureId")
+      @foreach (Creature creature in @Model)
+      {
+        <img src="../img/creatureImages/bodies/creature-test.png" width="100">
+      }
+      @* @Html.LabelFor(model => model.Name)
+			@Html.DropDownList("CreatureId") *@
     </div>
   </div>
 
