--- a/CreatureTeacher/Views/Creatures/Index.cshtml
+++ b/CreatureTeacher/Views/Creatures/Index.cshtml
@@ -40,7 +40,7 @@
     <div class="mdl-cell mdl-cell--4-col">
       <div class="demo-card-square mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title mdl-card--expand">
-          @* Image will go here *@
+     <     @* Image will go here *@
         </div>
         <div class="mdl-card__supporting-text">
           @creature.Name
@@ -50,12 +50,6 @@
             @Html.ActionLink($"View Details", "Details", new { id = creature.CreatureId })
           </a> *@
           <p class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">@Html.ActionLink("View Details", "Details", new { id = creature.CreatureId})</p>
-
-          @using (Html.BeginForm())
-          {
-            @Html.HiddenFor(model => model.Creature.CreatureId)
-            <input type="submit" value="View Details">
-          }
         </div>
       </div>
     </div>
