--- a/CreatureTeacher/Views/Creatures/Create.cshtml
+++ b/CreatureTeacher/Views/Creatures/Create.cshtml
@@ -13,37 +13,12 @@
   <div class="mdl-cell mdl-cell--4-col"></div>
   <div class="mdl-cell mdl-cell--4-col">
 		<div class="demo-card-square mdl-card mdl-shadow--2dp">
-			@using (Html.BeginForm())
-			{
-				@Html.LabelFor(model => model.Name)
-				@Html.EditorFor(model => model.Name)
-				@Html.LabelFor(model => model.Eye)
-				@Html.DropDownList("EyeId")
-				@Html.LabelFor(model => model.Mouth)
-				@Html.DropDownList("MouthId")
-				@Html.LabelFor(model => model.Head)
-				@Html.DropDownList("HeadId")
-				@Html.LabelFor(model => model.Tail)
-				@Html.DropDownList("TailId")
-				<button type="submit">Make Me a Friend!</button>
-			}
-  	</div>
-	</div>
-  <div class="mdl-cell mdl-cell--4-col">
-		<div class="demo-card-square mdl-card mdl-shadow--2dp">
 			<form action="/Creatures/Create" method="post">
 				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 					<label for="name" class="mdl-textfield__label">Creature Name</label>
 					<input id="name" name="name" type="text" class="mdl-textfield__input">
 				</div>
-				<div class="dropdown">
-					<button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eyes
-					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						@* @foreach (Eye eye in Model)
-						{
-							<a class="dropdown-item"></a>
-						}) *@
-					</div>
+				<div>
 					@Html.LabelFor(model => model.Eye)
 					@Html.DropDownList("EyeId")
 				</div>
@@ -64,6 +39,3 @@
   	</div>
 	</div>
 </div>
-
-
-@Html.ActionLink("Go back to all creatures", "Index")
