--- a/CreatureTeacher/wwwroot/css/site.css
+++ b/CreatureTeacher/wwwroot/css/site.css
@@ -1,5 +1,9 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿@import url('https://fonts.googleapis.com/css?family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Chewy&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bungee&display=swap');
+
 
 a.navbar-brand {
   white-space: normal;
@@ -70,3 +74,7 @@ body {
   background:
     url('../img/creatureImages/bodies/creature-test.png') bottom right 15% no-repeat #ec407a;
 }
+h1, .mdl-layout-title{
+  font-family: 'Bungee', cursive;
+}
+
