--- a/CreatureTeacher/Views/Creatures/Index.cshtml
+++ b/CreatureTeacher/Views/Creatures/Index.cshtml
@@ -41,7 +41,7 @@
     <div class="mdl-cell mdl-cell--4-col">
       <div class="demo-card-square mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title mdl-card--expand">
-     <     @* Image will go here *@
+         @* Image will go here *@
         </div>
         <div class="mdl-card__supporting-text">
           @creature.Name
